--- a/gazebo_ros/CMakeLists.txt
+++ b/gazebo_ros/CMakeLists.txt
@@ -23,7 +23,7 @@ else()
 endif()
 
 # Depend on system install of Gazebo
-find_package(gazebo REQUIRED)
+find_package(gazebo 7.0 REQUIRED)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GAZEBO_CXX_FLAGS}")
 
 find_package(Boost REQUIRED COMPONENTS thread)
